build_log.txt
[CLEAN] Removing old binaries...
Could Not Find C:\Users\krazy\Documents\GitHub\FantasyLloreAndWorldSimulator\bin\*.exe
[COPY] Copying shaders...
shaders\world.frag
shaders\world.vert
        2 file(s) copied.
[BUILD] Compiling Omnis Engine...
src/main.cpp:266:17: error: redefinition of 'settings'
  266 |   WorldSettings settings;
      |                 ^
src/main.cpp:264:17: note: previous definition is here
  264 |   WorldSettings settings;
      |                 ^
1 error generated.
src/core/NeighborFinder.cpp:21:24: error: no member named 'sqrt' in namespace 'std'; did you mean 'sort'?
   21 |   int side = (int)std::sqrt(count);
      |                        ^~~~
      |                        sort
C:/msys64/mingw64/include/c++/15.2.0/bits/stl_algo.h:4831:5: note: 'sort' declared here
 4831 |     sort(_RandomAccessIterator __first, _RandomAccessIterator __last)
      |     ^
src/core/NeighborFinder.cpp:21:19: error: no matching function for call to 'sort'
   21 |   int side = (int)std::sqrt(count);
      |                   ^~~~~~~~~
C:/msys64/mingw64/include/c++/15.2.0/bits/stl_algo.h:4831:5: note: candidate function template not viable: requires 2 arguments, but 1 was provided
 4831 |     sort(_RandomAccessIterator __first, _RandomAccessIterator __last)
      |     ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 errors generated.
[ERROR] Build failed. Check the logs above.
